Fix about section on mobile

--- a/public/less/partials/about.less
+++ b/public/less/partials/about.less
@@ -4,7 +4,7 @@
 	background: @grey;
 	color: @white;
 	text-align: center;
-	height: 100%;
+	min-height: 100%;
 	.font-size(@about-font-size);
 
 	a {
@@ -52,10 +52,17 @@
 	}
 }
 
+@media (min-height: 584px) {
+	#about {
+		height: 100%;
+	}
+}
+
 #about-wrap {
 	display: table;
 	margin: 0 auto;
 	max-width: 420px;
+	height: 100%;
 	min-height: 100%;
 }
 
